force-app/main/default/objects/Game__c/fields/Betting_Line_Source__c.field-meta.xml
<CustomField>
    <fullName>Betting_Line_Source__c</fullName>
    <label>Betting Line Source</label>
    <description>Source of the betting lines (e.g., DraftKings, FanDuel, consensus)</description>
    <type>Text</type>
    <length>100</length>
</CustomField>