force-app/main/default/objects/Game__c/fields/Betting_Line_Updated__c.field-meta.xml
<CustomField>
    <fullName>Betting_Line_Updated__c</fullName>
    <label>Betting Line Updated</label>
    <description>When the betting lines were last updated</description>
    <type>DateTime</type>
</CustomField>