force-app/main/default/objects/Game__c/fields/Bracket_Position__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Position__c</fullName>
    <label>Bracket Position</label>
    <description>Position in bracket for rendering</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>