force-app/main/default/objects/Game__c/fields/ESPN_Game_Id__c.field-meta.xml
<CustomField>
    <fullName>ESPN_Game_Id__c</fullName>
    <label>ESPN Game ID</label>
    <type>Text</type>
    <length>20</length>
    <externalId>true</externalId>
</CustomField>