force-app/main/default/objects/Game__c/fields/Game_Date__c.field-meta.xml
<CustomField>
    <fullName>Game_Date__c</fullName>
    <label>Game Date</label>
    <type>DateTime</type>
</CustomField>