force-app/main/default/objects/Game__c/fields/Game_Number__c.field-meta.xml
<CustomField>
    <fullName>Game_Number__c</fullName>
    <label>Game Number</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <externalId>true</externalId>
</CustomField>