force-app/main/default/objects/Game__c/fields/Next_Game__c.field-meta.xml
<CustomField>
    <fullName>Next_Game__c</fullName>
    <label>Next Game</label>
    <type>Lookup</type>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Previous Games</relationshipLabel>
    <relationshipName>Previous_Games</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>