force-app/main/default/objects/Game__c/fields/Over_Under__c.field-meta.xml
<CustomField>
    <fullName>Over_Under__c</fullName>
    <label>Over/Under</label>
    <description>Total points over/under line</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>