force-app/main/default/objects/Game__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round of 64</fullName>
            </value>
            <value>
                <fullName>Round of 32</fullName>
            </value>
            <value>
                <fullName>Sweet 16</fullName>
            </value>
            <value>
                <fullName>Elite 8</fullName>
            </value>
            <value>
                <fullName>Final Four</fullName>
            </value>
            <value>
                <fullName>Championship</fullName>
            </value>
            <value>
                <fullName>Conference Quarterfinal</fullName>
            </value>
            <value>
                <fullName>Conference Semifinal</fullName>
            </value>
            <value>
                <fullName>Conference Final</fullName>
            </value>
            <value>
                <fullName>First Four</fullName>
            </value>
            <value>
                <fullName>Conference First Round</fullName>
            </value>
            <value>
                <fullName>Conference Second Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>