force-app/main/default/objects/Game__c/fields/Spread__c.field-meta.xml
<CustomField>
    <fullName>Spread__c</fullName>
    <label>Spread</label>
    <description>Point spread for the game (negative means Team 1 is favored)</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>