force-app/main/default/objects/Game__c/fields/Team_1__c.field-meta.xml
<CustomField>
    <fullName>Team_1__c</fullName>
    <label>Team 1</label>
    <type>Lookup</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Games as Team 1</relationshipLabel>
    <relationshipName>Games_as_Team_1</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>