force-app/main/default/objects/Game__c/fields/Team_2__c.field-meta.xml
<CustomField>
    <fullName>Team_2__c</fullName>
    <label>Team 2</label>
    <type>Lookup</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Games as Team 2</relationshipLabel>
    <relationshipName>Games_as_Team_2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>