force-app/main/default/objects/Game__c/fields/Team_2_Moneyline__c.field-meta.xml
<CustomField>
    <fullName>Team_2_Moneyline__c</fullName>
    <label>Team 2 Moneyline</label>
    <description>Moneyline odds for Team 2 (e.g., -150 or +200)</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>