force-app/main/default/objects/Game__c/fields/Team_2_Score__c.field-meta.xml
<CustomField>
    <fullName>Team_2_Score__c</fullName>
    <label>Team 2 Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>