force-app/main/default/objects/Game__c/fields/TV_Network__c.field-meta.xml
<CustomField>
    <fullName>TV_Network__c</fullName>
    <label>TV Network</label>
    <type>Text</type>
    <length>50</length>
</CustomField>